--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -3,7 +3,7 @@ ar:
   sign_up: "إنشاء حساب"
   sign_in: "تسجيل الدخول"
   sign_out: "تسجيل خروج"
-  english: "الإنجليزية"
+  english: "English"
   arabic: "العربية"
   email: "البريد الالكتروني"
   password: "كلمة السر"
@@ -121,7 +121,7 @@ ar:
   male: "ذكر"
   out_of: "من"
   keyword_not_empty: "يجب الا يكون مكان الكلمة فارغ"
-  enter_categories: "ﺎﻠﺘﺼﻔﻳﺓ ﺢﺴﺑ ﺎﻠﻔﺋﺎﺗ"
+  enter_categories: "ابحث في التصنيفات"
   follow_words_info: "إتبع كلمات لتلقي بريد إلكتروني بمعلومات جديدة عن كلماتك. سيصلك بريد إن حصلت كلمة على مرادفات جديدة أو إحدى المرادفات حصلت على أكثر عدد من أصوات."
   synonyms_of: "مرادفات كلمة"
   age_range: "(من فضلك ادخل رقم من 10 الي 100)"
