--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -8,7 +8,7 @@ en:
   email: "Email"
   password: "Password"
   english: "English"
-  arabic: "Arabic"
+  arabic: "العربية"
   search: "Search Keywords"
   search_here: "search keywords here"
   keyword_add_success: "Keyword added to our database successfully"
