--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -284,3 +284,10 @@ ar:
   search: "بحث"
   search_here: "ابحث هنا"
   keyword_added: "لقد تم تسجيل %{keyword} بنجاح"
+  activerecord:
+    errors:
+      models:
+        gamer:
+          attributes:
+            date_of_birth:
+              before_or_equal_to: 'يجب أن يكون أكثر من عشر سنوات وأقل  من تسعون عام' 
