--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -283,3 +283,4 @@ en:
   education_level: "Education level"
   date_of_birth: "Date of Birth"
   back_to_game: "Back"
+  keyword_added: "keyword added successfully"
