--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -163,6 +163,7 @@ en:
   projects_index_categories: "Categories: "
   projects_index_description: "Description: "
   projects_index_edit: " edit"
+  projects_index_delete: "delete"
   projects_index_no_shared_projects: "There are no projects shared with you"
   add_word: "Add word"
   Add_words: "Add words"
