[isue #172][issue #175] created ajax follow/unfollow dynamic button

--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -44,6 +44,8 @@ en:
   followed_words: "Followed Words"
   words: "Words"
   unfollow: "Unfollow"
+  follow: "Follow"
+  following: "Following"
   select subscription: "Select Subscription"
   backend: "Developers"
   project: "Project"
