[Issue #80] finished implementation and documentation of username or email signin

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -1,4 +1,5 @@
 ar:
+  username_or_email: "إسم المستخدم أو البريد الالكتروني"
   arability: "عربيليتي"
   sign_up: "إنشاء حساب"
   sign_in: "تسجيل الدخول"
