--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -284,3 +284,4 @@ en:
   date_of_birth: "Date of Birth"
   back_to_game: "Back"
   choose_sub: "choose your subscription model"
+  developer_before_subscription: 'Please sign up as a developer to view this page'
