--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -1,4 +1,7 @@
 ar:
+  omar_error1: "هذه الكلمة ليست موجودة"
+  omar_error2: "هذا المعنى فارغ"
+  omar_error3: "هذا المعنى موجود بالفعل لهذه الكلمة"
   arability: "عربيليتي"
   sign_up: "إنشاء حساب"
   sign_in: "تسجيل الدخول"
