[Issue #205][WIP] Added link Back

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -40,7 +40,7 @@ ar:
   desc: "عن المشروع"
   new_project: "مشروع جديد"
   create_project: "انشاء مشروع"
-  back: "عودة"
+  back: "<< عودة"
   edit_project: "تعديل المشروع"
   save_project: "حفظ المشروع"
   import: "استيراد"
