--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -290,3 +290,4 @@ en:
   date_of_birth: "Date of Birth"
   back_to_game: "Back"
   keyword_added: "keyword added successfully"
+  twitter_signin: "Sign in with Twitter"
