--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -292,3 +292,4 @@ en:
   choose_sub: "choose your subscription model"
   developer_before_subscription: 'Please sign up as a developer to view this page'
   keyword_added: "keyword added successfully"
+  per_month: "/month"
