--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -299,3 +299,4 @@ ar:
               before_or_equal_to: 'يجب أن يكون أكثر من عشر سنوات وأقل  من تسعون عام' 
   choose_sub: 'إختر نظامك'           
   developer_before_subscription: 'من فضلك سجل كمطور لتتمكن من رؤية هذه الصفحة '
+  per_month: "/شهر"
