--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -292,3 +292,4 @@ ar:
           attributes:
             date_of_birth:
               before_or_equal_to: 'يجب أن يكون أكثر من عشر سنوات وأقل  من تسعون عام' 
+  project_delete: "تم مسح المشروع بنجاح"
