--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -284,3 +284,4 @@ en:
   education_level: "Education level"
   date_of_birth: "Date of Birth"
   back_to_game: "Back"
+  project_delete: "Project successfully deleted"
