[#371][WIP] added locales and image

--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -291,3 +291,4 @@ en:
   back_to_game: "Back"
   keyword_added: "keyword added successfully"
   twitter_signin: "Sign in with Twitter"
+  go_to_twitter: "Go to Twitter"
