--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -298,3 +298,4 @@ ar:
             date_of_birth:
               before_or_equal_to: 'يجب أن يكون أكثر من عشر سنوات وأقل  من تسعون عام' 
   twitter_signin: "تسجيل دخول بتويتر"
+  go_to_twitter: "إذهب إلى تويتر"
