[#371][WIP] added scenario if authentication exists sign in connected user

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -299,3 +299,4 @@ ar:
               before_or_equal_to: 'يجب أن يكون أكثر من عشر سنوات وأقل  من تسعون عام' 
   twitter_signin: "تسجيل دخول بتويتر"
   go_to_twitter: "إذهب إلى تويتر"
+  twitter_signin_success: "تم تسجيل الدخول بتويتر بنجاح"
