--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -300,6 +300,6 @@ ar:
   you_vote: ""
   vote_action: "لقد اخترت"
   chosen_action: "كانسب بديل لكلمة"
-  vote_log: "ذاكرة اختيارتك" 
+  vote_log: "اصواتك السابقة" 
   no_you: "انت"
   no_vote_log: "لم تختار اي معني لاي كلمة حتي الان!!"
