--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -291,3 +291,7 @@ en:
   back_to_game: "Back"
   keyword_added: "keyword added successfully"
   guest_sign_up_title: "Enter these four simple data about you that will help our cause greatly"
+  guest_error1: "Education can't be blank"
+  guest_error2: "Country can't be blank"
+  guest_error3: "Gender can't be blank"
+  guest_error4: "Date Of Birth can't be blank"
