--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -58,7 +58,7 @@ en:
   name: "Name"
   category: "Category"
   categories: "Categories"
-  formality: "Formality"
+  formality: "Language"
   formal: "Formal"
   slang: "Slang"
   age: "Age"
