[#358][WIP] adds trasnlations

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -239,7 +239,6 @@ ar:
   facebook: "فيسبوك"
   my_info: "معلوماتي"
   social_media: "التواصل الاجتماعي"
-  logged_in_to_fb: "مبروك!! لقد تمت عملية التواصل بنجاح. تمتع بخاصياتك الجديدة."
   logged_out_of_fb: "تم فصل الفيس بنجاح"
   shared_on_fb: "مبروك فزت بجائزة الحلوى"
   error_fb: "شكرا و لكن لا نريد ان نحتل التايملاين الخاص بك"
@@ -303,3 +302,11 @@ ar:
   already_connected: "التواصل بالفعل موجود!"
   remove_connection: "إلغاء الاتصال مع تويتر"
   connect_to_twitter: "تواصل مع تويتر"
+  fill_in_next: "من فضلك املأ الفراغات التالية"
+  or: "أو"
+  existing_account: "سجل بحساب اخر"
+  signed_in_exst: "تم التواصل بنجاح بإستخدام حساب اخر"
+  signed_in_fb: "تم الدخول بنجاح بإستخدام فيسبوك"
+  logged_in_to_fb: "حسابك الآن متصل بفيسبوك"
+  oops_error_fb: "واجهتنا مشاكل حين حولنا التواصل مع فيسبوك من فضلك حاول التواصل مرة أخرى"
+  already_connected: "لقد قمت بتسجيل الدخول من قبل و حسابك متصل بفيسبوك بالفعل"
