--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -218,7 +218,6 @@ en:
   facebook: "facebook"
   my_info: "My Information"
   social_media: "Social Media"
-  logged_in_to_fb: "CONGRATULATIONS!! You are now connected to Facebook! Enjoy your new features"
   logged_out_of_fb: "Your account was disconnected from Facebook"
   shared_on_fb: "You get extra brownie points"
   error_fb: "It's okay, we don't want to spam your timeline"
@@ -296,3 +295,11 @@ en:
   already_connected: "already connected to Twitter!"
   remove_connection: "Remove Connection"
   connect_to_twitter: "Connect to Twitter"
+  fill_in_next: "Please fill the rest of the fields"
+  or: "OR"
+  existing_account: "Sign in with an existing account"
+  signed_in_exst: "Signed in succesfully via existing account"
+  signed_in_fb: "Signed in succesfully via facebook"
+  logged_in_to_fb: "Your account is now connected to Facebook"
+  oops_error_fb: "Oops an error has occured while communicating with Facebook. Please try again"
+  already_connected: "You're signed in and your account is already connected to facebook"
