--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -297,3 +297,13 @@ ar:
           attributes:
             date_of_birth:
               before_or_equal_to: 'يجب أن يكون أكثر من عشر سنوات وأقل  من تسعون عام' 
+  report_sent: "تم تقديم التقرير بنجاح. سوف يتم ابلاغك بالايميل عند إتخاذ تصرف"
+  report_abusive: "حدد الكلمات غير اللائقة"
+  report: "إبلاغ"
+  help_us_through_reporting: > 
+    ساعدونا في تحديد الكلمات غير اللائقة عن طريق إختيار الكلمات. عند ملئك هذه 
+    الإستمارة يتم عرض الكلمات على الأدمن و يتم إخطارك عن طريق الايميل في حال 
+    إتخاذ موقف من الطلب.
+  words_in_page: "الكلمات الموجودة بالصفحة:"
+  close: "إغلاق"
+  submit: "تسليم التقرير"
