--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -290,3 +290,14 @@ en:
   date_of_birth: "Date of Birth"
   back_to_game: "Back"
   keyword_added: "keyword added successfully"
+  report_sent: "Your report was successfully submitted. You'll be notified via e-mail upon taking action"
+  help_us_through_reporting: > 
+    Help us filter abusive keywords and synonyms 
+    by choosing a word you find inappropriate and submitting a report using 
+    this form. An email will be sent to you upon taking action concerning 
+    the submitted report.
+  report_abusive: "Report abusive words"
+  report: "Report"
+  words_in_page: "Words in this page:"
+  close: "Close"
+  submit: "Submit Report"
