[#371][WIP] restricted connection of a Twitter account to be used once

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -306,3 +306,4 @@ ar:
   already_connected: "التواصل بالفعل موجود!"
   remove_connection: "إلغاء الاتصال مع تويتر"
   connect_to_twitter: "تواصل مع تويتر"
+  connected_before: "حساب تويتر هذا متصل مع حساب عربيليتي اخر"
