--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -291,3 +291,4 @@ ar:
           attributes:
             date_of_birth:
               before_or_equal_to: 'يجب أن يكون أكثر من عشر سنوات وأقل  من تسعون عام' 
+  enter_word_first: "ادخل كلمة اولآ"
