[Issue #366][fixed] changed some translations to be more descriptive

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -304,6 +304,6 @@ ar:
     ساعدونا في تحديد الكلمات غير اللائقة عن طريق إختيار الكلمات. عند ملئك هذه 
     الإستمارة يتم عرض الكلمات على الأدمن و يتم إخطارك عن طريق الايميل في حال 
     إتخاذ موقف من الطلب.
-  words_in_page: "الكلمات الموجودة بالصفحة:"
+  words_in_page: "الكلمات التي يمكن اختيارها بالصفحة:"
   close: "إغلاق"
   submit: "تسليم التقرير"
