--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -298,6 +298,6 @@ en:
     the submitted report.
   report_abusive: "Report abusive words"
   report: "Report"
-  words_in_page: "Words in this page:"
+  words_in_page: "Words that you can report within this page:"
   close: "Close"
   submit: "Submit Report"
