[Issue #366][fixed] added flash translations

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -307,3 +307,4 @@ ar:
   words_in_page: "الكلمات التي يمكن اختيارها بالصفحة:"
   close: "إغلاق"
   submit: "تسليم التقرير"
+  report_sent_success: "تمت العملية بنجاح"
