--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -303,3 +303,5 @@ en:
   logged_in_to_fb: "Your account is now connected to Facebook"
   oops_error_fb: "Oops an error has occured while communicating with Facebook. Please try again"
   already_connected: "You're signed in and your account is already connected to facebook"
+  errors_prohibited: "errors prohibited you from being saved"
+  sign_up_e_acc: "Sign up with an existing account"
