[Issue #359][WIP] added translations, chaged headers size ad ext

--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -290,8 +290,15 @@ en:
   date_of_birth: "Date of Birth"
   back_to_game: "Back"
   keyword_added: "keyword added successfully"
-  guest_sign_up_title: "Enter these four simple data about you that will help our cause greatly"
-  guest_error1: "Education can't be blank"
-  guest_error2: "Country can't be blank"
-  guest_error3: "Gender can't be blank"
-  guest_error4: "Date Of Birth can't be blank"
+  guest_sign_up_title: "Enter these four simple data about you to be able to play"
+  guest_continue_sign_up_title: "Create a new Arability account"
+  guest_error1: "Education can't be empty"
+  guest_error2: "Country can't be empty"
+  guest_error3: "Gender can't be empty"
+  guest_error4: "Date Of Birth can't be empty"
+  guest_error5: "Username can't be empty"
+  guest_error6: "e-mail can't be empty"
+  guest_error7: "Password can't be empty"
+  guest_error8: "Password confirmation can't be empty"
+  guest_error9: "Password and password confirmation do not match"
+  become_member: "Become a member"
