--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -303,3 +303,7 @@ ar:
   already_connected: "التواصل بالفعل موجود!"
   remove_connection: "إلغاء الاتصال مع تويتر"
   connect_to_twitter: "تواصل مع تويتر"
+  won_trophies_title: "الانجازات التي تم اكمالها"
+  not_won_trophies_title: "الانجازات التي بامكانك اكمالها "
+  no_trophies: "لم تكمل أي انجازات حتى الأن"
+  all_trophies: "لقد أكملت كل الانجازات التي بمكانك انجزها "
