--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -296,3 +296,7 @@ en:
   already_connected: "already connected to Twitter!"
   remove_connection: "Remove Connection"
   connect_to_twitter: "Connect to Twitter"
+  won_trophies_title: "Earned Trophies"
+  not_won_trophies_title: "Available Trophies"
+  no_trophies: "Oh oh! It seems that you haven't played the game enough and you still haven't won any trophies! Go Play now!"
+  all_trophies: "Wow! You have one all the trophies!"
