[Issue #372][Finished] added jquery to change styling between arabic and english view and added margin to back button

--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -296,3 +296,4 @@ en:
   no_you: "You" 
   no_vote_log: "didn't vote for any translation yet!!"
   keyword_added: "keyword added successfully"
+  back_log: "Back"
