--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -91,6 +91,9 @@ en:
   export: "Export"
   add_words: "Add words"
   recommended_words: "Recommended words"
+  recommended_for_project: "Recommended words for your project:"
+  select_words: "Select the words you would like to add to your project"
+  no_recommended_words: "Sorry, there are no recommended words for this project"
   share: "Share"
   delete: "Delete"
   word: "Word"
@@ -253,7 +256,7 @@ en:
   restart_game: "Restart Game"
   back_to_game: "Back"
   to_voting: "To Voting Page"
-  restart_game: "Restart Game" 
+  restart_game: "Restart Game"
   country: "Country:"
   age_from: "Age from:"
   age_to: "to:"
