[Issue #372][Finished] added a link to the game in the view and fixed the back button

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -303,4 +303,6 @@ ar:
   vote_log: "اصواتك السابقة" 
   no_you: "انت"
   no_vote_log: "لم تختار اي معني لاي كلمة حتي الان!!"
-  back_log: "الرجوع"
+  back_log: "اللعبة"
+  play_link_log: "ابدأ اللعبة"
+  vote_log_button: "الأصوات"
