--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -296,4 +296,6 @@ en:
   no_you: "You" 
   no_vote_log: "didn't vote for any translation yet!!"
   keyword_added: "keyword added successfully"
-  back_log: "Back"
+  back_log: "Game"
+  play_link_log: "start playing now"
+  vote_log_button: "Votes"
